[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "dsd"
version = "0.4.0"
description = "Process data as per data standards documents"
authors = [
    {name = "Miles Smith", email = "miles-smith@omrf.org"},
]
dependencies = [
    "scar @ git+https://github.com/Novartis/scar",
    "scanpy>=1.10.2",
    "muon>=0.1.6",
    "scvi-tools>=1.1.5",
    "pandas>=2.2.2",
    "tenacity>=9.0.0",
    "loguru>=0.7.2",
    "rich>=13.7.1",
    "typer>=0.12.4",
    "scikit-image>=0.24.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "BSD-3"}

# [project.optional-dependencies]
# cuda = [
#     "jax[cuda12]>=0.4.31",
# ]


[project.scripts]
dsd = "dsd.cli:app"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "nox>=2024.4.15",
    "sourcery>=1.22.0",
]
